# algolens-desk

./: .gitignore  CMakeLists.txt  main.cpp
installer/: AlgoLens.iss
source/: app.cpp  app.h
source/bridge/: IPCBridge.cpp  IPCBridge.h
source/drawing/: nanovg_impl.cpp
source/http/: HTTPServer.cpp  HTTPServer.h
source/ipc/: IRChannel.h  SharedMemory.cpp  SharedMemory.h
source/ir/: IRParser.cpp  IRParser.h
source/process/: ProcessManager.cpp  ProcessManager.h
source/renderers/: BaseRenderer.h
source/renderers/components/array/: Array.cpp  Array.h
source/renderers/components/graph/: Graph.cpp  Graph.h
source/renderers/components/grid/: Grid.cpp  Grid.h
source/renderers/components/hashmap/: HashMap.cpp  HashMap.h
source/renderers/components/linkedlist/: LinkedList.cpp  LinkedList.h
source/renderers/components/queue/: Queue.cpp  Queue.h
source/renderers/components/stack/: Stack.cpp  Stack.h
source/renderers/components/tree/: Tree.cpp  Tree.h
source/renderers/components/variable/: Variables.cpp  Variables.h
source/shell/: AlgoLensApp.cpp  AlgoLensApp.h  AlgoLensClient.cpp  AlgoLensClient.h  Docking.h  Notify.cpp  Notify.h  main.cpp
source/tools/: http_test_main.cpp  ir_writer_main.cpp
